# loop_nest

./: .clang-format  .clang_complete  .gitignore  .gitmodules  AlignedVec.h  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  address_packer.h  aot_fn.h  aot_perf.h  arithmetic_operation.h  arm_arithmetic_operation.h  arm_elementwise_operation.h  arm_loop_nest.cpp  arm_loop_nest.h  arm_loop_nest_old.h  arm_test.cpp  arm_transposer.h  baselines.h  code_generator.h  common.h  configuration.h  dabun_config.hpp.in  dabun_loop_nest.cpp  denormals.h  elementwise_operation.h  halide_examples.cpp  inst.cpp  isa.h  isa_bench.h  jose_test.txt  log.h  loop_nest.cpp  loop_nest.h  loop_nest_arm.cpp  loop_nest_avx2.cpp  loop_nest_baseline.h  loop_nest_bench.cpp  (+28 more)
apps/: CMakeLists.txt  address_packer_search.cpp  amx.cpp  amx_bf16.cpp  baselines.hpp  gflops.cpp  loop_nest.cpp  loop_nest_baseline.hpp  loop_nest_bench.cpp  loop_nest_bench.hpp  loop_nest_fp16.cpp  loop_nest_stress_test.cpp  loop_nest_tensillica.cpp  loop_nest_test.hpp  loop_nest_tests.cpp  loop_tree.cpp  serialization.cpp  tensillica_play.cpp  transposer.cpp  transposer_baseline.hpp  transposer_bench.hpp  transposer_stress_test.cpp  utility.hpp
apps/halide/: halide_examples.cpp  translate_to_halide_arm.cpp
assets/logo/: print.eps  print_transparent.eps
benchmarks/: INSTALL-UTILS.md  README.md  barplot_benchmarks.py  cleanall.sh  env.yml  intern_midpoint_graphs.sh  run.sh  run_arm.sh  runall.sh
benchmarks/ablation-benchmarks/: README.md  run.sh  run_loop_nest.py
benchmarks/edge-benchmarks/: README.md  halide_edge.cpp  loop_nest_edge.cpp  run.sh  run_halide.py  run_loop_nest.py
benchmarks/mm-benchmarks/: README.md  loop_nest_matmul.cpp  run.sh  run_loop_nest.py  run_polly.py  run_tccg.py
benchmarks/operator-benchmarks/: README.md  halide_from_file.cpp  halide_nn_ops.cpp  loop_nest_from_file.cpp  loop_nest_nn_ops.cpp  run.sh  run_from_file.sh  run_halide.py  run_loop_nest.py
benchmarks/systems/: README.md  halide_vars.sh  install_halide.sh  install_polly.sh  install_tccg.sh  polly_vars.sh  tccg_Makefile  tccg_vars.sh
benchmarks/utils/: barplot_benchmarks.py
cmake/aarch64/: dabun.cmake
cmake/x86_64/: dabun.cmake
deprecated/tests/: arithmetic_operation_test.cpp  elementwise_operation_test.cpp  optimization_configuration_test.cpp  run_loop_tree.sh
include/dabun/: LN_arguments.hpp  aligned_vector.hpp  aligned_wrapper.hpp  aot_fn.hpp  arithmetic_operation.hpp  bf16x2.hpp  check.hpp  code_generator.hpp  common.hpp  configuration.hpp  core.hpp  denormals.hpp  elementwise_operation.hpp  float.hpp  fmt.hpp  intcmp.hpp  isa.hpp  log.hpp  loop_nest.hpp  loop_nest_descriptor.hpp  math.hpp  measure.hpp  memory_resource.hpp  mpl.hpp  namespace.hpp  numeric.hpp  one_constant.hpp  peak_gflops.hpp  peak_gflops.ipp  predef.hpp  qvec4.hpp  random_vector.hpp  serialization.hpp  transposer.hpp  xbyak.hpp
include/dabun/amx/: amx_loop_nest.hpp  qvec4.hpp
include/dabun/arm/: arithmetic_operation.hpp  configuration.hpp  elementwise_operation.hpp  loop_nest.hpp  loop_nest_fp16.hpp  meta_mnemonics.hpp  multi_vreg.hpp  peak_gflops.hpp  transposer.hpp  xbyak.hpp
include/dabun/code_generator/: aot_fn.hpp  code_generator.hpp  memory_resource.hpp  xbyak.hpp
include/dabun/detail/: apple.hpp  most_frequent_queue.hpp
include/dabun/hask/: aligned_alloc.hpp  apple.hpp  miltuple.hpp  number_array.hpp  random.hpp  type_traits.hpp
include/dabun/loop_tree/: all_nodes.hpp  compiled_loop_nest_node.hpp  compiled_transpose_node.hpp  compute_node.hpp  for_loop_node.hpp  nested_for_loops_node.hpp  node.hpp  program.hpp  report.hpp  transpose_node.hpp  types.hpp  utility.hpp
include/dabun/mpl/: cond.hpp  core.hpp
include/dabun/tensillica/: cpp_intrinsics_code_generator.hpp  dl_compiled_fn.hpp  loop_nest.hpp  multi_vmm.hpp  peak_gflops.hpp
include/dabun/thread/: barrier.hpp  core.hpp  cpu_pool.hpp  cpu_set.hpp  operating_cpu_set.hpp  parallel_for.hpp
include/dabun/thread/detail/: .#cpu_set_macros.hpp
include/dabun/utility/: array.hpp  for_all.hpp  most_frequent_queue.hpp  tmp_file_name.hpp  vek.hpp
include/dabun/x86/: address_packer.hpp  aot_perf.hpp  arithmetic_operation.hpp  configuration.hpp  denormals.hpp  elementwise_operation.hpp  loop_nest.hpp  multi_vmm.hpp  oprof-jitdump.hpp  peak_gflops.hpp  transposer.hpp  xbyak.hpp
scripts/: check_headers.sh
src/: loop_nest.cpp  peak_gflops.cpp  transposer.cpp
src/arm/: loop_nest.cpp  peak_gflops.cpp  transposer.cpp
src/x86/: multi_vmm.cpp  peak_gflops.cpp  transposer.cpp
tests/: CMakeLists.txt  arithmetic_operation_test.cpp  catch2_main.cpp  elementwise_operation_test.cpp  handpicked_loop_nest_test.cpp  optimization_configuration_test.cpp  run_loop_tree.sh  sentinel.cpp  transpose_meta_mnemonics.cpp
tests/baseline/: loop_nest_baseline.hpp  matrix_transpose_baseline.hpp
