set(DABUN_APPS_DIR ${CMAKE_CURRENT_SOURCE_DIR})

function(dabun_app name vex float isa)
  message(STATUS "dabun_app ${name}.${vex}.${float} ${name}.cpp")
  add_executable(${name}.${vex}.${float} ${name}.cpp)
  target_link_libraries(${name}.${vex}.${float} PUBLIC dabun)
  target_compile_options(${name}.${vex}.${float}
    PRIVATE "-DDABUN_ISA=${isa}"
    PRIVATE "-DDABUN_VEX=extension::${vex}"
    PRIVATE "-DDABUN_ARITHMETIC=dabun::${float}")
endfunction(dabun_app)

function(dabun_x86_apps vex float isa)
  dabun_app(gflops ${vex} ${float} ${isa})
  dabun_app(loop_nest ${vex} ${float} ${isa})
  dabun_app(loop_nest_bench ${vex} ${float} ${isa})
  dabun_app(loop_nest_stress_test ${vex} ${float} ${isa})
  dabun_app(loop_nest_tests ${vex} ${float} ${isa})
  dabun_app(loop_tree ${vex} ${float} ${isa})
  dabun_app(serialization ${vex} ${float} ${isa})
  dabun_app(transposer ${vex} ${float} ${isa})
  dabun_app(transposer_stress_test ${vex} ${float} ${isa})
endfunction(dabun_x86_apps)

function(dabun_arm_apps vex float isa)
  dabun_app(gflops ${vex} ${float} ${isa})
  dabun_app(loop_nest ${vex} ${float} ${isa})
  dabun_app(loop_nest_bench ${vex} ${float} ${isa})
  dabun_app(loop_nest_stress_test ${vex} ${float} ${isa})
  dabun_app(loop_nest_tests ${vex} ${float} ${isa})
#  dabun_app(loop_tree ${vex} ${float} ${isa})
#  dabun_app(serialization ${vex} ${float} ${isa})
#  dabun_app(transposer ${vex} ${float} ${isa})
#  dabun_app(transposer_stress_test ${vex} ${float} ${isa})
endfunction(dabun_arm_apps)


if("${DABUN_HOST_ARCHITECTURE}" STREQUAL "x86_64")
  if (DABUN_BUILD_APPS_FOR_ALL_SUPPORTED_VEX OR DABUN_BUILD_APPS_FOR_AVX2)
    dabun_x86_apps(avx2 fp32 avx2)
  endif()
  if (DABUN_BUILD_APPS_FOR_ALL_SUPPORTED_VEX OR DABUN_BUILD_APPS_FOR_AVX512)
    dabun_x86_apps(avx512 fp32 avx512)
  endif()
elseif("${DABUN_HOST_ARCHITECTURE}" STREQUAL "aarch64")
  if (DABUN_BUILD_APPS_FOR_ALL_SUPPORTED_VEX OR DABUN_BUILD_APPS_FOR_NEON)
    dabun_arm_apps(neon fp32 aarch64)
  endif()
  if (DABUN_BUILD_APPS_FOR_ALL_SUPPORTED_VEX OR DABUN_BUILD_APPS_FOR_NEON_FP16)
    dabun_arm_apps(neon_fp16 fp16 aarch64)
  endif()
elseif("${DABUN_HOST_ARCHITECTURE}" STREQUAL "arm64")
  if (DABUN_BUILD_APPS_FOR_ALL_SUPPORTED_VEX OR DABUN_BUILD_APPS_FOR_NEON)
    dabun_arm_apps(neon fp32 aarch64)
  endif()
  if (DABUN_BUILD_APPS_FOR_ALL_SUPPORTED_VEX OR DABUN_BUILD_APPS_FOR_NEON_FP16)
    dabun_arm_apps(neon_fp16 fp16 aarch64)
  endif()
else()
endif()
